--- a/software/package.json
+++ b/software/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@inrupt/vocab-common-rdf": "^1.0.5",
+    "@jeswr/rdfjs-sign": "^1.3.1",
     "@types/n3": "^1.16.5",
     "n3": "^1.20.4",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "webcrypto": "^0.1.1"
   }
 }
