--- a/software/package.json
+++ b/software/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "author": "",
   "license": "ISC",
@@ -12,8 +12,21 @@
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "@jeswr/rdfjs-sign": "^1.3.1",
     "@types/n3": "^1.16.5",
+    "@types/rdf-js": "^4.0.2",
     "n3": "^1.20.4",
-    "typescript": "^5.5.4",
+    "rdf-js": "^4.0.2",
+    "uuid": "^10.0.0",
     "webcrypto": "^0.1.1"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.5.0",
+    "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0",
+    "jest-rdf": "^1.8.1",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
