--- a/software/package.json
+++ b/software/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "@jeswr/rdfjs-sign": "^1.3.1",
+    "@types/moment": "^2.13.0",
     "@types/n3": "^1.16.5",
     "@types/rdf-js": "^4.0.2",
+    "moment": "^2.30.1",
     "n3": "^1.20.4",
     "rdf-js": "^4.0.2",
     "uuid": "^10.0.0",
