--- a/software/package.json
+++ b/software/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dexagod/rdf-retrieval": "^1.0.3",
     "@inrupt/vocab-common-rdf": "^1.0.5",
     "@jeswr/rdfjs-sign": "^1.3.1",
     "@types/moment": "^2.13.0",
