fix: Fixed incorrectly compiled .js files being added

--- a/software/package.json
+++ b/software/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest"
+    "test": "npx jest",
+    "build": "npx tsc"
   },
   "author": "",
   "license": "ISC",
