--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/request": "^2.48.12"
+    "@types/request": "^2.48.12",
+    "typescript": "^5.5.4"
   }
 }
