fix: fixed script to run proxy server

--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "commander": "^12.1.0",
     "express": "^4.19.2",
     "n3": "^1.21.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
