--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@dexagod/rdf-retrieval": "^1.1.1",
+    "@inrupt/vocab-common-rdf": "^1.0.5",
     "@jeswr/rdfjs-sign": "^1.3.1",
     "commander": "^12.1.0",
+    "eyereasoner": "^16.20.2",
     "n3": "^1.21.0"
   }
 }
