--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@jeswr/rdfjs-sign": "^1.3.1",
     "commander": "^12.1.0",
     "eyereasoner": "^16.20.2",
-    "n3": "^1.21.0"
+    "n3": "^1.21.0",
+    "winston": "^3.14.2"
   }
 }
