--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express": "^4.19.2",
     "n3": "^1.21.0",
     "request": "^2.88.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
