--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/n3": "^1.16.5",
     "commander": "^12.1.0",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.2",
     "n3": "^1.21.0",
     "request": "^2.88.2",
     "ts-node": "^10.9.2",
